figue/src/schema/snapshots/figue__schema__tests__config_skipped_field_is_omitted.snap
---
source: crates/figue/src/schema/tests.rs
expression: "facet_json :: to_string_pretty(& value).unwrap()"
---
{
  "docs": {},
  "args": {
    "args": {},
    "subcommands": {}
  },
  "configs": [
    {
      "docs": {},
      "field_name": "config",
      "fields": {
        "visible": {
          "docs": {},
          "value": {
            "Leaf": {
              "kind": {
                "Scalar": "String"
              }
            }
          }
        }
      }
    }
  ],
  "special": {}
}
